[gd_scene load_steps=5 format=3 uid="uid://c0rtd7dvco0s1"]

[ext_resource type="Script" path="res://scripts/scene_start.gd" id="1_4bcv0"]
[ext_resource type="Texture2D" uid="uid://bcpjjwifqb5v3" path="res://assets/pixil-frame-0 (1).png" id="1_jlpfn"]
[ext_resource type="Texture2D" uid="uid://bwbngkpvnh6yd" path="res://assets/11.png" id="2_o23pj"]
[ext_resource type="AudioStream" uid="uid://b0ackub0pg1r" path="res://sounds/click.mp3" id="3_q3qt7"]

[node name="HUDStart" type="Node2D"]
script = ExtResource("1_4bcv0")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1163.0
offset_bottom = 652.0
color = Color(0.0117647, 0.0117647, 0.0235294, 1)

[node name="Start" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -121.5
offset_top = -261.0
offset_right = 111.5
offset_bottom = -189.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="Settings" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -116.5
offset_top = -128.0
offset_right = 111.5
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="NameGame" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -151.5
offset_top = 101.0
offset_right = 240.5
offset_bottom = 170.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Melody  Odyssey "

[node name="Score" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 6.0
offset_top = 257.0
offset_right = 1155.0
offset_bottom = 312.0
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageTimer" type="Timer" parent="ColorRect"]

[node name="11" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.196078)
position = Vector2(583, 333)
scale = Vector2(0.524968, 0.560185)
texture = ExtResource("2_o23pj")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(351, 139)
scale = Vector2(0.013675, 0.013675)
texture = ExtResource("1_jlpfn")

[node name="Label" type="Label" parent="."]
offset_left = 11.0
offset_top = 603.0
offset_right = 872.0
offset_bottom = 635.0

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_q3qt7")

[connection signal="pressed" from="ColorRect/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ColorRect/Settings" to="." method="_on_settings_pressed_Settings"]
